feat: added User model, controller, route, Swagger docs, and 4 dummy users
